// map_enum.proto

syntax = "proto3";

enum Status {
  UNKNOWN = 0;
  ACTIVE = 1;
  INACTIVE = 2;
}

message MapEnum {
  map<string, Status> status_map = 1;
}
